[package]
name = "insect"
description = "A high precision scientific calculator with full support for physical units."
authors = ["David Peter <mail@david-peter.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
once_cell = "1"
rustyline = "10"
itertools = "0.10"
num-rational = "0.4"
num-traits = "0.2"


# binary-only dependencies (see https://github.com/rust-lang/cargo/issues/1982)
[dependencies.clap]
version = "3"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]

[[bin]]
name = "insect"
path = "src/cli/main.rs"
