[project]
name = "numbat-docs"
version = "0.1.0"
description = "Numbat documentation build system"
requires-python = ">=3.14"
dependencies = [
    "zensical>=0.0.15",
]

[project.entry-points."pygments.lexers"]
numbat = "numbat_lexer:NumbatLexer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["numbat_lexer.py"]
