[project]
name = "numbat-docs"
version = "0.1.0"
description = "Numbat documentation build system"
requires-python = ">=3.14"
dependencies = ["zensical>=0.0.21,<0.0.22"]

[project.scripts]
build = "build:main"

[project.entry-points."pygments.lexers"]
numbat = "numbat_lexer:NumbatLexer"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "numbat_lexer"
#source-include = ["numbat_lexer.py"]
