[package]
name = "insect-cli"
description = "A high precision scientific calculator with full support for physical units."
authors = ["David Peter <mail@david-peter.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rustyline = "10"
dirs-next = "2"
insect = { path = "../insect" }

[dependencies.clap]
version = "4"
features = ["suggestions", "color", "wrap_help", "derive"]

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[[bin]]
name = "insect"
path = "src/main.rs"
