[package]
name = "insect"
description = "A high precision scientific calculator with full support for physical units."
authors = ["David Peter <mail@david-peter.de>"]
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
once_cell = "1"
itertools = "0.10"
num-rational = "0.4"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
