[package]
name = "numbat-cli"
description = "A statically typed programming language for scientific computations with first class support for physical dimensions and units."
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities", "science", "mathematics", "compilers"]
keywords = ["language", "compiler", "physics", "units", "calculation"]
homepage = "https://numbat.dev/"
repository = "https://github.com/sharkdp/numbat"
version = "1.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
rust-version = "1.70"

[dependencies]
anyhow = "1"
rustyline = { version = "12", features = ["derive"] }
dirs = "5"
numbat = { version = "1.7.0", path = "../numbat" }
colored = "2"
itertools = "0.11"
toml = { version = "0.8.6", features = ["parse"] }
serde = { version = "1.0.190", features = ["derive"] }

[dependencies.clap]
version = "4"
features = ["suggestions", "color", "wrap_help", "derive"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "numbat"
path = "src/main.rs"
