[package]
name = "numbat-cli"
description = "A statically typed programming language for scientific computations with first class support for physical dimensions and units."
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities", "science", "mathematics", "compilers"]
keywords = ["language", "compiler", "physics", "units", "calculation"]
homepage = "https://numbat.dev/"
repository = "https://github.com/sharkdp/numbat"
version = "1.14.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
rust-version = "1.70"

[dependencies]
anyhow = "1"
rustyline = { version = "13", features = ["derive"] }
dirs = "5"
numbat = { version = "1.14.0", path = "../numbat" }
colored = "2"
itertools = "0.12"
toml = { version = "0.8.8", features = ["parse"] }
serde = { version = "1.0.195", features = ["derive"] }
terminal_size = "0.3.0"
jiff = "0.1"

[dependencies.clap]
version = "4"
features = ["suggestions", "color", "wrap_help", "derive"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "numbat"
path = "src/main.rs"
