[package]
authors = ["David Peter <mail@david-peter.de>"]
name = "numbat-exchange-rates"
version = "0.1.0"
description = "A library to fetch and parse currency exchange rates from the ECB"
edition = "2021"
homepage = "https://numbat.dev/"
repository = "https://github.com/sharkdp/numbat"
license = "MIT OR Apache-2.0"

[dependencies]
attohttpc = "0.26.0"
quick-xml = "0.29.0"
