[package]
name = "numbat-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
numbat = { path = "../numbat" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
codespan-reporting = "0.12"

[[bin]]
name = "numbat-lsp"
path = "src/main.rs"