[package]
name = "numbat-wasm"
authors = ["David Peter <mail@david-peter.de>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
numbat = { path = "../numbat", default-features = false, features = [
    "html-formatter",
] }
html-escape = "0.2.13"
termcolor = "1.4.1"
codespan-reporting = "0.12"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
