[package]
name = "numbat"
description = "A statically typed programming language for scientific computations with first class support for physical dimensions and units."
authors = ["David Peter <mail@david-peter.de>"]
categories = ["science", "mathematics", "compilers"]
keywords = ["language", "compiler", "physics", "units", "calculation"]
homepage = "https://numbat.dev/"
repository = "https://github.com/sharkdp/numbat"
version = "1.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.70"

[dependencies]
thiserror = "1"
itertools = "0.11"
num-rational = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"
codespan-reporting = "0.11"
strsim = "0.10.0"
pretty_dtoa = "0.3"
numbat-exchange-rates = { version = "0.4.0", path = "../numbat-exchange-rates" }
heck = { version = "0.4.1", features = ["unicode"] }
unicode-ident = "1.0.11"
unicode-width = "0.1.10"
libc = "0.2.147"
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path"] }
num-format = "0.4.4"
walkdir = "2"

[dev-dependencies]
approx = "0.5"
glob = "0.3"
insta = "1.33.0"
once_cell = "1.18.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prelude"
harness = false
