[package]
name = "numbat"
description = "A statically typed programming language for scientific computations with first class support for physical dimensions and units."
authors = ["David Peter <mail@david-peter.de>"]
categories = ["science", "mathematics", "compilers"]
keywords = ["language", "compiler", "physics", "units", "calculation"]
homepage = "https://numbat.dev/"
repository = "https://github.com/sharkdp/numbat"
version = "1.15.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.74"

[dependencies]
thiserror = "1"
itertools = "0.12"
num-rational = "0.4"
num-integer = "0.1.45"
num-traits = "0.2"
codespan-reporting = "0.11"
strsim = "0.11.0"
pretty_dtoa = "0.3"
numbat-exchange-rates = { version = "0.5.0", path = "../numbat-exchange-rates" }
heck = { version = "0.4.1", features = ["unicode"] }
unicode-ident = "1.0.12"
unicode-width = "0.1.11"
libc = "0.2.152"
rust-embed = { version = "8.2.0", features = [
    "interpolate-folder-path",
    "debug-embed",
] }
num-format = "0.4.4"
walkdir = "2"
jiff = { version = "0.1.3", features = ["js"] }
termcolor = { version = "1.4.1", optional = true }
html-escape = { version = "0.2.13", optional = true }
rand = "0.8.5"
strfmt = "0.2.4"
indexmap = "2.2.6"
mendeleev = "0.8.1"
plotly = "0.10.0"
compact_str = { version = "0.8.0", features = ["serde"] }

[features]
default = ["fetch-exchangerates"]
fetch-exchangerates = ["numbat-exchange-rates/fetch-exchangerates"]
html-formatter = ["termcolor", "html-escape"]

[dev-dependencies]
approx = "0.5"
glob = "0.3"
insta = "1.34.0"
once_cell = "1.19.0"
criterion = { version = "0.5", features = ["html_reports"] }
percent-encoding = "2.3.1"

[[bench]]
name = "prelude"
harness = false
